[tool.poetry]
name = "salvage"
version = "2.0.0"
description = "Backup Docker Compose files to GitHub and notify about changes."
authors = ["EthanC <16727756+EthanC@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
loguru-discord = "^1.3.1"
httpx = "^0.27.0"
PyGithub = "^2.3.0"
discord-webhook = "^1.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
