[project]
name = "salvage"
version = "2.1.0"
description = "Backup Docker Compose files to GitHub and notify about changes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "loguru-discord>=1.4.0",
    "httpx>=0.27.2",
    "pygithub>=2.5.0",
    "discord-webhook>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.3",
]

[tool.ruff.lint]
select = ["I"]
