[project]
name = "salvage"
version = "3.1.0"
description = "Backup Docker Compose files to GitHub and notify about changes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    "loguru-discord>=1.4.0",
    "httpx>=0.28.1",
    "pygithub>=2.8.1",
    "discord-webhook>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
